# Agent1

./: .gitignore  AGENT1_INDEX.md  Agent1.html  Cargo.toml  DESIGN.md  README.md  run.bat  rustfmt.toml
.agent1/: loops.toml
.github/workflows/: ci.yml  release.yml
Agent1_Project_Docs/: 00_Decision_Log_ADR.md  00_Document_Index.md  00_Glossary_And_Definitions.md  00_Repository_Readme.md  01_Known_Unknowns_And_Open_Questions.md  01_NonFunctional_Requirements_NFR.md  01_Product_Requirements_PRD.md  01_Risk_Register_And_Assumptions.md  01_Scope_MVP_And_Roadmap.md  01_Use_Cases.md  01_User_Personas_And_Jobs_To_Be_Done.md  01_User_Stories_And_Acceptance_Criteria.md  01_Vision_Goals_NonGoals.md  02_Backlog_Prioritization.md  02_Project_Plan_Timeline_And_Milestones.md  02_Release_Plan_And_Versioning.md  03_API_Contracts_And_Schemas.md  03_Async_Runtime_And_Concurrency.md  03_Component_Design_Modules_And_Interfaces.md  03_Error_Handling_Retries_Timeouts.md  03_External_Events_And_WebSocket_Schema.md  03_Flow_Diagrams_Mermaid.md  03_Functions_Objects_And_Attributes.md  03_System_Architecture_Overview.md  03_Tech_Stack_Lock.md  04_Data_Governance_Retention_Backups.md  04_Data_Plan.md  04_Database_Schema_And_Migrations.md  05_Design_System_And_Accessibility.md  05_UI_Plan.md  05_UX_Flows_And_Wireframes.md  06_Client_Integration_Spec.md  06_Configuration_And_Feature_Flags.md  07_Secrets_And_Key_Management.md  07_Security_Privacy_Compliance_Plan.md  07_Threat_Model.md  08_QA_Test_Strategy.md  08_Test_Cases_And_Checklists.md  09_Incident_Response.md  09_Observability_Spec.md  (+7 more)
agents/: assistant.toml  code_reviewer.toml  critic.toml  planner.toml  worker.toml
crates/agent1-cli/: Cargo.toml
crates/agent1-cli/src/: main.rs
crates/agent1-cli/tests/: integration.rs
crates/agent1-collab/: Cargo.toml
crates/agent1-collab/src/: lib.rs
crates/agent1-core/: Cargo.toml
crates/agent1-core/src/: lib.rs
crates/agent1-db/: Cargo.toml
crates/agent1-db/migrations/: 0001_initial.sql  0002_orchestrator.sql  0003_collaboration.sql  0004_suggestions.sql
crates/agent1-db/src/: lib.rs
crates/agent1-gateway/: Cargo.toml
crates/agent1-gateway/src/: lib.rs
crates/agent1-memory/: Cargo.toml
crates/agent1-memory/src/: lib.rs
crates/agent1-models/: Cargo.toml
crates/agent1-models/src/: lib.rs
crates/agent1-orchestrator/: Cargo.toml
crates/agent1-orchestrator/src/: escalation.rs  goal_decomposer.rs  lib.rs  orchestrator.rs  progress_tracker.rs  team_manager.rs  types.rs
crates/agent1-runtime/: Cargo.toml
crates/agent1-runtime/src/: lib.rs
crates/agent1-tools/: Cargo.toml
crates/agent1-tools/src/: lib.rs
crates/agent1-whatsapp/: Cargo.toml
crates/agent1-whatsapp/src/: lib.rs
desktop/: README.md  index.html  package-lock.json  package.json  playwright.config.js
desktop/e2e/: agent.spec.js  visual-qa.mjs
desktop/src/: App.jsx  collab.css  main.jsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/components/: CanvasGraph.jsx  CollabComponents.jsx  CollabWorkspace.jsx  HierarchicalAgentTree.jsx  MemoryPanel.jsx  ProjectSphere.jsx  SharedWorkspaceVisual.jsx  index.js
desktop/src/hooks/: useCollaboration.js
docs/: MILESTONE_001_VERTICAL_SLICE.md  REMAINING_RELEASE_PLAN.md
docs/legacy-app/: app.js  index.html  styles.css
plans/: agent1-milestones-5-to-10.md  agent1-orchestrator-v1.md
scripts/: agent1-external-intel.ps1  install-external-intel-task.ps1  smoke-test.ps1
whatsapp-sidecar/: README.md  index.js  package-lock.json  package.json
