[workspace]
members = [
    "crates/agent1-core",
    "crates/agent1-tools",
    "crates/agent1-models",
    "crates/agent1-db",
    "crates/agent1-runtime",
    "crates/agent1-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.local/agent1"

[workspace.dependencies]
agent1-core = { path = "crates/agent1-core" }
agent1-tools = { path = "crates/agent1-tools" }
agent1-models = { path = "crates/agent1-models" }
agent1-db = { path = "crates/agent1-db" }
agent1-runtime = { path = "crates/agent1-runtime" }
axum = { version = "0.8.6", features = ["json", "ws"] }
async-stream = "0.3.6"
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
tempfile = "3.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "process", "time", "io-util", "net", "sync", "signal"] }
tokio-stream = "0.1.16"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
