[package]
name = "agent1-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agent1"
path = "src/main.rs"

[dependencies]
agent1-core.workspace = true
agent1-db.workspace = true
agent1-models.workspace = true
agent1-runtime.workspace = true
agent1-tools.workspace = true
agent1-whatsapp.workspace = true
axum.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.15"
