[package]
name = "agent1-memory"
edition = "2021"
version = "0.1.0"
description = "Agent1 semantic memory with vector embeddings"
license = "MIT OR Apache-2.0"

[dependencies]
agent1-core.workspace = true
agent1-db.workspace = true
agent1-models.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }