[package]
name = "agent1-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent1-core.workspace = true
agent1-db.workspace = true
agent1-models.workspace = true
agent1-tools.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
