[package]
name = "agent1-whatsapp"
edition = "2021"
version = "0.1.0"
description = "Agent1 WhatsApp integration via sidecar"
license = "MIT OR Apache-2.0"

[dependencies]
agent1-core = { path = "../agent1-core" }
agent1-db = { path = "../agent1-db" }
axum = { workspace = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
tracing.workspace = true
uuid.workspace = true
reqwest = { workspace = true }

[dev-dependencies]
tempfile.workspace = true